[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
block-mesh = "0.2.0"
futures-lite = "1.13.0"
futures-util = "0.3.28"
ilattice = "0.3.0"
ndcopy = "0.3.0"
ndshape = "0.3.0"
noise = "0.8.2"
once_cell = "1.18.0"
thread_local = "1.1.7"
