[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy = "0.11"
# bevy_atmosphere = "0.6.0"
# bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
bevy_atmosphere = { git = "https://github.com/GodGotzi/bevy_atmosphere" }
bevy_dolly = { path = "../bevy_dolly" }
block-mesh = "0.2.0"
dashmap = "5.4.0"
futures-lite = "1.13.0"
futures-util = "0.3.28"
ilattice = "0.3.0"
indexmap = "2.0.0"
ndcopy = "0.3.0"
ndshape = "0.3.0"
noise = "0.8.2"
once_cell = "1.18.0"
phf = { version = "0.11.1", features = ["macros"] }
strum = { version = "0.24.1", features = ["derive"] }
thread_local = "1.1.7"
